--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,33 @@
-version: "3.9"
 services:
   db:
     image: mariadb:latest
     restart: always
     env_file:
       - ./secrets/.env
-    # environment:
-    #   MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-    #   MARIADB_DATABASE: ${DB_DATABASE}
-    #   MARIADB_USER: ${DB_USER}
-    #   MARIADB_PASSWORD: ${DB_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
       - ./db/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql:ro
+    # не потрібен зовнішній порт? — сміливо прибирай весь блок "ports"
     ports:
       - "3307:3306"
+    healthcheck:
+      test: ["CMD-SHELL", "mariadb-admin ping -h 127.0.0.1 -uroot -p$${MARIADB_ROOT_PASSWORD} --silent"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
+      start_period: 30s
+
   bot:
     build: ./app
     restart: always
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - ./app:/app
       - ./secrets/.env:/app/secrets/.env:ro
     env_file:
       - ./secrets/.env
-  
+
 volumes:
   db_data:
